<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <EditText
        android:id="@+id/editAddressName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_start_edit_name"
        android:layout_marginTop="@dimen/margin_top_edit_name"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.166"
        app:layout_constraintStart_toEndOf="@+id/edit_name_view"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/editAddressLastName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_start_lastName"
        android:layout_marginTop="@dimen/margin_top_lastName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.062"
        app:layout_constraintStart_toEndOf="@+id/edit_last_name_view"
        app:layout_constraintTop_toBottomOf="@+id/editAddressName" />

    <EditText
        android:id="@+id/editEmailAddress"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_start_edit_email"
        android:layout_marginTop="@dimen/margin_top_emailaddress"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.171"
        app:layout_constraintStart_toEndOf="@+id/edit_email_view"
        app:layout_constraintTop_toBottomOf="@+id/editAddressLastName" />

    <EditText
        android:id="@+id/editPhoneNumber"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_start_edit_phone"
        android:layout_marginTop="@dimen/margin_top_edit_phone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.087"
        app:layout_constraintStart_toEndOf="@+id/edit_phone_view"
        app:layout_constraintTop_toBottomOf="@+id/editEmailAddress" />

    <EditText
        android:id="@+id/editAddressLocation"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_start_edit_location"
        android:layout_marginTop="@dimen/margin_top_edit_location"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.11"
        app:layout_constraintStart_toEndOf="@+id/edit_location_view"
        app:layout_constraintTop_toBottomOf="@+id/editPhoneNumber" />

    <Button
        android:id="@+id/btnEdit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_top_button_edit"
        android:text="@string/save_button"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editAddressLocation"
        app:layout_constraintVertical_bias="0.008" />

    <TextView
        android:id="@+id/edit_name_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_start_name_view"
        android:layout_marginTop="@dimen/margin_top_name_view"
        android:text="@string/edit_name"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/edit_last_name_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_start_last_name"
        android:layout_marginTop="@dimen/margin_top_lastName_view"
        android:text="@string/edit_last_name"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edit_name_view" />

    <TextView
        android:id="@+id/edit_email_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_start_email_view"
        android:layout_marginTop="@dimen/margin_top_email_view"
        android:text="@string/edit_email"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edit_last_name_view" />

    <TextView
        android:id="@+id/edit_phone_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_start_phone_view"
        android:layout_marginTop="@dimen/margin_top_phone_view"
        android:text="@string/edit_phone"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edit_email_view" />

    <TextView
        android:id="@+id/edit_location_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_start_view"
        android:layout_marginTop="@dimen/margin_top_view"
        android:text="@string/edit_location"
        app:layout_constraintBottom_toTopOf="@+id/btnEdit"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edit_phone_view"
        app:layout_constraintVertical_bias="0.0" />
</androidx.constraintlayout.widget.ConstraintLayout>